adding cross validator and more refactoring

--- a/trainParams.properties
+++ b/trainParams.properties
@@ -15,30 +15,50 @@
 
 # Sample machine learning properties file
 
+# Choose between PERCEPTRON or MAXENT
 Algorithm=PERCEPTRON
 Iterations=500
 Cutoff=0
-Threads=4
+Threads=6
 
-#### Custom parameters added by ixa-pipe-pos ####
- 
+##################################################
+#### Custom parameters added by ixa-pipe-chunk ####
+##################################################
+
+# Languages supported: en
 Language=en
 
+# TrainingCorpus:
+TrainSet=/home/ragerri/experiments/pos/penn/opennlp/data/test/0-18.opennlp
+TestSet=/home/ragerri/experiments/pos/penn/opennlp/data/test/22-24.opennlp
+
+# CorpusFormat: conll (2001)
+# CorpusFormat of the training corpus
+CorpusFormat=conll
+
+# OutputModel: if commented out, ixa-pipe-pos will save the model with the
+# name of this properties file
+OutputModel=trainParams.bin
+
 # Beamsize 1 amounts to greedy search
-Beamsize=3
+#BeamSize=3
 
-# Formats opennlp or conll
-Corpus=opennlp
+##################
+#### FEATURES ####
+##################
 
-## Cross Evaluation if empty no cross evaluation is performed;
-## Cross Evaluation takes two values as arguments, namely, 50:100;
-## These values represent: 
-##    + The iteration to start the cross evaluation 
-##    + The range of iterations to perform each cross evaluation
-## Leave empty to disactivate this option (this is the default)
-#
+#FeatureSet: use opennlp set of features or a more extended featureset
+#including trigrams and other stuff. If commented out it defaults to baseline.
+#Possible values are "Opennlp" or "Baseline".
+FeatureSet=Baseline
 
-#CrossEval=1:10
-CrossEval=
+#####################################
+#### CROSS VALIDATION PARAMETERS ####
+#####################################
 
-
+# Cross Validation Folds; if commented out it defaults to 10 cross validation
+# folds.
+Folds=5
+# Evaluation type: choose between 'detailed' and 'error; only for cross-validation.
+# It defaults to detailed evaluation.
+EvaluationType=detailed
