--- a/trainParams.properties
+++ b/trainParams.properties
@@ -29,8 +29,8 @@ Threads=6
 Language=en
 
 # TrainingCorpus:
-TrainSet=/home/ragerri/experiments/pos/penn/opennlp/data/test/0-18.opennlp
-TestSet=/home/ragerri/experiments/pos/penn/opennlp/data/test/22-24.opennlp
+TrainSet=/home/ragerri/experiments/chunking/test.txt
+TestSet=/home/ragerri/experiments/chunking/test.txt
 
 # CorpusFormat: conll (2001)
 # CorpusFormat of the training corpus
@@ -50,7 +50,7 @@ OutputModel=trainParams.bin
 #FeatureSet: use opennlp set of features or a more extended featureset
 #including trigrams and other stuff. If commented out it defaults to baseline.
 #Possible values are "Opennlp" or "Baseline".
-FeatureSet=Baseline
+#FeatureSet=Baseline
 
 #####################################
 #### CROSS VALIDATION PARAMETERS ####
