refactoring to ixa-pipe-ml

--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	<groupId>eus.ixa</groupId>
 	<artifactId>ixa-pipe-chunk</artifactId>
 	<packaging>jar</packaging>
-	<version>1.1.0</version>
+	<version>2.0.0</version>
 	<name>ixa-pipe-chunk</name>
 	<licenses>
 		<license>
@@ -35,7 +35,7 @@
 	<dependency>
 			<groupId>com.github.ixa-ehu</groupId>
 			<artifactId>kaflib-naf</artifactId>
-			<version>1.1.12</version>
+			<version>1.1.14</version>
 		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
@@ -63,6 +63,11 @@
 			<artifactId>opennlp-tools</artifactId>
 			<version>1.6.0</version>
 			<scope>compile</scope>
+		</dependency>
+		<dependency>
+			<groupId>eus.ixa</groupId>
+			<artifactId>ixa-pipe-ml</artifactId>
+			<version>0.0.1</version>
 		</dependency>
 	</dependencies>
 	<distributionManagement>
@@ -192,6 +197,8 @@
 							<goal>shade</goal>
 						</goals>
 						<configuration>
+						<shadedArtifactAttached>true</shadedArtifactAttached>
+						<shadedClassifierName>exec</shadedClassifierName>
 							<transformers>
 								<transformer
 									implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
