--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	<groupId>eus.ixa</groupId>
 	<artifactId>ixa-pipe-chunk</artifactId>
 	<packaging>jar</packaging>
-	<version>1.1.0</version>
+	<version>1.1.1</version>
 	<name>ixa-pipe-chunk</name>
 	<licenses>
 		<license>
@@ -35,7 +35,7 @@
 	<dependency>
 			<groupId>com.github.ixa-ehu</groupId>
 			<artifactId>kaflib-naf</artifactId>
-			<version>1.1.12</version>
+			<version>1.1.15</version>
 		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
@@ -192,6 +192,8 @@
 							<goal>shade</goal>
 						</goals>
 						<configuration>
+						<shadedArtifactAttached>true</shadedArtifactAttached>
+							<shadedClassifierName>exec</shadedClassifierName>
 							<transformers>
 								<transformer
 									implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
